* New icons (thanks to Predrag), Icons and their order is customizable in preferences, now. * toURI().toURL() replaced by a static method in Tools. To be continued.