@@ -16,7 +16,7 @@
  *along with this program; if not, write to the Free Software
  *Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
-/* $Id: MindMapController.java,v 1.35.14.21.2.67 2008-05-04 15:05:13 christianfoltin Exp $ */
+/* $Id: MindMapController.java,v 1.35.14.21.2.68 2008-07-09 20:01:11 christianfoltin Exp $ */
 
 package freemind.modes.mindmapmode;
 
@@ -1158,8 +1158,8 @@ freemind.main.Resources.getInstance().logException(					e1);
             URL absolute = null;
             try {
                String relative = selected.getLink();
-               absolute = Tools.isAbsolutePath(relative) ? new File(relative).toURI().toURL() :
-                  new URL(getMap().getFile().toURI().toURL(), relative); }
+               absolute = Tools.isAbsolutePath(relative) ? Tools.fileToUrl(new File(relative)) :
+                  new URL(Tools.fileToUrl(getMap().getFile()), relative); }
             catch (MalformedURLException ex) {
                JOptionPane.showMessageDialog(getView(),"Couldn't create valid URL for:"+getMap().getFile());
                freemind.main.Resources.getInstance().logException(ex);
@@ -1187,8 +1187,8 @@ freemind.main.Resources.getInstance().logException(					e1);
             URL absolute = null;
             try {
                String relative = selected.getLink();
-               absolute = Tools.isAbsolutePath(relative) ? new File(relative).toURI().toURL() :
-                  new URL(getMap().getFile().toURI().toURL(), relative); }
+               absolute = Tools.isAbsolutePath(relative) ? Tools.fileToUrl(new File(relative)) :
+                  new URL(Tools.fileToUrl(getMap().getFile()), relative); }
             catch (MalformedURLException ex) {
                JOptionPane.showMessageDialog(getView(),"Couldn't create valid URL.");
                return; }
@@ -1521,7 +1521,7 @@ freemind.main.Resources.getInstance().logException(					e1);
                          if (node.getLink() != null) {
                             String possiblyRelative = node.getLink();
                             String relative = Tools.isAbsolutePath(possiblyRelative) ?
-                               new File(possiblyRelative).toURI().toURL().toString() : possiblyRelative;
+                            		Tools.fileToUrl(new File(possiblyRelative)).toString() : possiblyRelative;
                             if (relative != null) {
                                String strText = "<html><img src=\"" + relative + "\">";
                                setLink(node, null);
@@ -1574,7 +1574,7 @@ freemind.main.Resources.getInstance().logException(					e1);
             input = chooser.getSelectedFile();
             setLastCurrentDir(input.getParentFile());
             try {
-                link = input.toURI().toURL();
+                link = Tools.fileToUrl(input);
                 relative = link.toString();
             } catch (MalformedURLException ex) {
                 getController().errorMessage(getText("url_error"));
@@ -1583,7 +1583,7 @@ freemind.main.Resources.getInstance().logException(					e1);
             if (getFrame().getProperty("links").equals("relative")) {
                 //Create relative URL
                 try {
-                    relative = Tools.toRelativeURL(getMap().getFile().toURI().toURL(), link);
+                    relative = Tools.toRelativeURL(Tools.fileToUrl(getMap().getFile()), link);
                 } catch (MalformedURLException ex) {
                     getController().errorMessage(getText("url_error"));
                     return null;
